syntax = "proto3";

package bfg.router_service;

service RouterService {
  rpc CreateRoutingGrid (CreateRoutingGridRequest) returns (CreateRoutingGridReply) {}
  rpc QueryRoutingGrid (QueryRoutingGridRequest) returns (QueryRoutingGridReply) {}
  rpc AddRoutes (AddRoutesRequest) returns (AddRoutesReply) {}
}

enum PredefinedTechnology {
  NONE = 0;
  SKY130 = 1;
  GF180MCU = 2;
}

// FIXME(aryap): Isn't this baked into gRPC somehow?
enum StatusCode {
  OK = 0;
  GRID_NOT_FOUND = 1;
  OTHER_ERROR = 100;
}

message Status {
  StatusCode code = 1;
  string message = 2;
}

message CreateRoutingGridRequest {
  // One of "gf180mcu", "sky130".
  PredefinedTechnology predefined_technology = 1;
  
  // FUTURE: Technology protobuf to describe technology directly.
}

message CreateRoutingGridReply {
  Status status = 1;

  int64 grid_id = 2;
}

message AddRoutesRequest {
  int64 grid_id = 1;
}

message AddRoutesReply {
  Status status = 1;
}

message QueryRoutingGridRequest {
  int64 grid_id = 1;
}

message QueryRoutingGridReply {
  Status status = 1;
}
